{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 9,
  "lineage": "dfeb949a-43c8-b2cf-fec6-1978a5aec853",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "argocd",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd/argocd-ingress",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "nginx",
                  "nginx.ingress.kubernetes.io/backend-protocol": "HTTP",
                  "nginx.ingress.kubernetes.io/ssl-redirect": "false"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "argocd-ingress",
                "namespace": "argocd",
                "resource_version": "366847",
                "uid": "0424053f-5dae-40b2-8f8b-870a260ca276"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "argocd.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "argocd-server",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "localhost",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "Ingress",
            "name": "argocd-ingress",
            "namespace": "argocd"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "gitea",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "cloud-native-gauntlet/gitea-ingress",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "nginx",
                  "nginx.ingress.kubernetes.io/ssl-redirect": "false"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "gitea-ingress",
                "namespace": "cloud-native-gauntlet",
                "resource_version": "366849",
                "uid": "2285e4df-cd49-4860-a295-764533321d2a"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "gitea.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "gitea",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 3000
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "localhost",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "Ingress",
            "name": "gitea-ingress",
            "namespace": "cloud-native-gauntlet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "keycloak",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "cloud-native-gauntlet/keycloak-ingress",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "nginx",
                  "nginx.ingress.kubernetes.io/ssl-redirect": "false"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "keycloak-ingress",
                "namespace": "cloud-native-gauntlet",
                "resource_version": "366846",
                "uid": "26a395dc-7c45-45b0-af6e-e79a8354cffa"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "keycloak.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "keycloak",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8080
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "localhost",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "Ingress",
            "name": "keycloak-ingress",
            "namespace": "cloud-native-gauntlet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "linkerd_viz",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "linkerd-viz/linkerd-viz-ingress",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "nginx",
                  "nginx.ingress.kubernetes.io/ssl-redirect": "false"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "linkerd-viz-ingress",
                "namespace": "linkerd-viz",
                "resource_version": "366845",
                "uid": "d7d1f7e6-aed8-4e6b-bdee-ab0d74eae4a4"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "linkerd.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "web",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8084
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "localhost",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "Ingress",
            "name": "linkerd-viz-ingress",
            "namespace": "linkerd-viz"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "rust_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "cloud-native-gauntlet/rust-api-ingress",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "nginx",
                  "nginx.ingress.kubernetes.io/ssl-redirect": "false"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "rust-api-ingress",
                "namespace": "cloud-native-gauntlet",
                "resource_version": "366848",
                "uid": "0b39a26c-12eb-4378-add5-8326efba4305"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "api.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "rust-api-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "localhost",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "Ingress",
            "name": "rust-api-ingress",
            "namespace": "cloud-native-gauntlet"
          }
        }
      ]
    }
  ]
}